Layout.scss - Remove center alignment from container and fix background image position

--- a/src/component/layout/Layout.scss
+++ b/src/component/layout/Layout.scss
@@ -3,9 +3,9 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
 
   display: flex;
-  align-items: center;
   min-height: 100vh;
-  padding: 10%;
+  padding: 10% 15%;
 }
